# customers-data-analysis

./: .env.sample  docker-compose.yml  pyproject.toml
data/: schema.sql
src/: ingestion.py
src/notebooks/: 00_ingestion.ipynb
